--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
 <html>
-<h1> jo hyun jin </h1>
+<h1> jo hyun jin(수정) </h1>
+
+
+<img src="/STS0113/img/cat3.JPG">
+
+<img src="/STS0113/img/dogcat.jpg">
+
 </html>
